# shadcn-nuxt-tauri-template

./: .gitignore  Dockerfile  LICENSE  README.md  components.json  gen-tauri-nuxt.sh  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.clinerules/: .clinerules.md
app/assets/css/: tailwind.css
app/components/ui/alert-dialog/: AlertDialogAction.vue  AlertDialogContent.vue  AlertDialogDescription.vue  AlertDialogTitle.vue
app/components/ui/calendar/: Calendar.vue  CalendarCell.vue  CalendarCellTrigger.vue  CalendarGrid.vue  CalendarHeader.vue  CalendarNextButton.vue
app/components/ui/carousel/: Carousel.vue  CarouselNext.vue
app/components/ui/checkbox/: Checkbox.vue
app/components/ui/context-menu/: ContextMenuLabel.vue  ContextMenuRadioItem.vue  ContextMenuSubTrigger.vue
app/components/ui/menubar/: Menubar.vue  MenubarItem.vue  MenubarRadioItem.vue  MenubarSubTrigger.vue  MenubarTrigger.vue
app/components/ui/number-field/: NumberFieldInput.vue
app/components/ui/pin-input/: PinInput.vue  PinInputGroup.vue
app/components/ui/range-calendar/: RangeCalendarGrid.vue  RangeCalendarGridRow.vue  RangeCalendarHeading.vue
app/components/ui/resizable/: ResizableHandle.vue
app/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
app/components/ui/stepper/: Stepper.vue  (+4 more)
app/pages/: index.vue
src/: app.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/assets/css/: tailwind.css
src/components/: SalaryCalculator.vue
src/pages/: index.vue
src/stores/: insuranceData.json
src/utils/: taxCalculator.ts
(+57 files in other folders)
