[package]
name = "shadcn-nuxt-tauri-template"
version = "1.0.0"
description = "shadcn nuxt tauri template"
authors = ["ikiwi"]
license = "MIT"
repository = ""
edition = "2025"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.15", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.19", features = [] }
